feature: 采集器相关接口实现
